--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -5,5 +5,23 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "Default": "Data Source=NM-NB-10024638;Initial Catalog=literatureDB;Integrated Security=True"
+
+  },
+  "Token": {
+    "Issuer": "http://localhost:5000",
+    "Key": "secretkeythiskeyshouldneverleavetheserver"
+  },
+  "SMTPDEV": {
+    "Host": "in-v3.mailjet.com",
+    "Username": "",
+    "Password": "",
+    "Port": "587"
+  },
+  "ReturnPaths": {
+    "ConfirmEmail": "http://localhost:4200/confirmemail",
+    "SenderEmail": "bravekahweka@gmail.com"
   }
 }
