--- a/SPA/ClientApp/package.json
+++ b/SPA/ClientApp/package.json
@@ -18,6 +18,12 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@auth0/angular-jwt": "^5.0.2",
+    "@fortawesome/fontawesome-free": "^5.14.0",
+    "@full-fledged/alerts": "^14.0.0",
+    "bootstrap": "^4.5.2",
+    "bootswatch": "^4.5.2",
+    "ngx-progressbar": "^9.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
